# esw-serialization

./: .gitignore  README.md  pom.xml  shell.nix
src/main/avro/: measurements.avsc
src/main/cpp/: dataset.cpp  dataset.h  datatype.h  jsonserializable.h  main.cpp  measurementinfo.cpp  measurementinfo.h  measurements.av.hh  meson.build  result.cpp  result.h
src/main/java/cz/esw/serialization/handler/: AvroDataHandler.java  ProtoDataHandler.java
src/main/java/cz/esw/serialization/json/: Dataset.java
src/main/proto/: measurements.proto
src/test/java/cz/esw/serialization/handler/: AvroDataHandlerTest.java
